syntax = "proto3";

option csharp_namespace = "grpc";

package backendgrpcservice;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (GrpcApiReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message GrpcApiReply {
  string message = 1;
}
